--- a/liaoxuefeng.com/函数式编程/正则表达式.md
+++ b/liaoxuefeng.com/函数式编程/正则表达式.md
@@ -21,7 +21,7 @@
                 示例二、现有字符串‘abcd’，表达式：bd*,其含义为不管d取到0次还是多次，前面一定是‘b’，在字符串中‘b’相邻的后面找不到‘d’，‘bd*’最后的取值结果为‘b’
      +     表示匹配‘前面的那一个字符’至少一次 （即1次或多次)，等同于{1,}
             例如：‘ab+c’能匹配到‘abc’（匹配1次‘b’），也能匹配到‘abbc’（匹配2次‘b’），但是不能匹配到‘ac’（因为至少要匹配1次‘b’）
-     ?     表示匹配‘前面的那一个字符’0个或者1个字符，例如：ab?c 只能匹配 ac或 abc
+     ?     表示匹配‘前面的那一个字符’0个或者1个字符，例如：ab?c 只能匹配 ac或 abc; a(.+?)b 可从“ba123ba678b”匹配到["123","678"] 
     {n}    表示n个字符
     {n,m}  表示n-m个字符; n <= 字符数 <= m
     注意：{m,n}中的m和n可以省略其中一个，{,n}相当于{0,n}，{m,}相当于{m,整数最大值}
@@ -33,5 +33,9 @@
 ### 【分组】
     将小括号内的字符作为一组。
     例如 "name":"lee521",可以用表达式 (.+?):"(.+?)" 
-
+    例如 a(.+?)b 可从“ba123ba678ba11111111b”匹配到["123","678","11111111"]
+    解析：(1)".+" 指的是匹配a和b之间任意一个或多个字符,a和b间夹住的字符个数可以是任意个数，默认贪婪模式(a和b间出现的字符越多越好),匹配结果肯定
+            只有一个，即匹配结果为['123ba678ba11111111']
+         (2)".+?" 指的是匹配a和b之间任意一个或多个字符，a和b间夹住的字符个数可以是任意个数，表达式中加上“?”,就停止贪婪,以最小单位匹配a和b之间的
+            任意个数字符，即["123","678","11111111"]
 
