--- a/liaoxuefeng.com/函数式编程/正则表达式.md
+++ b/liaoxuefeng.com/函数式编程/正则表达式.md
@@ -26,15 +26,15 @@
     {n}    表示n个字符
     {n,m}  表示n-m个字符; n <= 字符数 <= m
     注意：{m,n}中的m和n可以省略其中一个，{,n}相当于{0,n}，{m,}相当于{m,整数最大值}
-        ? 这个字符在正则表达中与 ?, +, *, {m,n}连用时还有一个额外的功能，就是将匹配模式由贪婪模式（尽可能的增加匹配字符个数） 变成 
-        非贪婪模式（尽可能减少匹配字符个数）
+        ? 这个字符在正则表达中与 ?, +, *, {m,n}连用时还有一个额外的功能，就是将匹配模式由贪婪模式（尽可能多的增加匹配量词修饰的字符个数） 变成 
+        非贪婪模式（尽可能少的匹配量词修饰的字符个数）
 ### 【边界匹配】
     ^  匹配字符串的开头，在多行模式中匹配每一行的行首，表示匹配以指定字符开头的字符串，‘^abc.*’ 可匹配 abc 或 abcd
     $  匹配字符串的末尾，在多行模式中匹配每一行的行尾，表示匹配以指定字符结尾的字符串，‘.*abc$’ 可匹配 abc 或 123abc
 
 ### 【分组】
     将小括号内的字符作为一组。
-    例如 "name":"lee521",可以用表达式 (.+?):"(.+?)" 
+    例如 "name":"lee521",可以用表达式 "(.+?)":"(.+?)" 或 (.+?):"(.+?)"
     例如 a(.+?)b 可从“ba123ba678ba11111111b”匹配到["123","678","11111111"]
     解析：(1)".+" 指的是匹配a和b之间任意一个或多个字符,a和b间夹住的字符个数可以是任意个数，默认贪婪模式(a和b间出现的字符越多越好),匹配结果肯定
             只有一个，即匹配结果为['123ba678ba11111111']
